# multi-model-collab

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  install.sh  server.json
.claude/: local-tasks.md
.github/workflows/: ci.yml  pr-review.yml  publish.yml
docs/: CHANGELOG.md  DEV_NOTES.md  README_CN.md  ROADMAP.md
docs/design/: mux-orchestrate-spec.md
docs/releases/: v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md
docs/research/: model-evaluation-2026-03.md
evals/: evals.json
mcp/collab-hub/: README.md  pyproject.toml
mcp/collab-hub/src/collab_hub/: __init__.py  audit.py  cli.py  config.py  detect.py  policy.py  server.py
mcp/collab-hub/src/collab_hub/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
mcp/collab-hub/tests/: test_audit_policy.py  test_detect.py  test_e2e.py
mcp/modelmux/: README.md  eval_real_results.json  pyproject.toml
mcp/modelmux/src/modelmux/: __init__.py  __main__.py  audit.py  cli.py  compare.py  config.py  costs.py  dashboard.py  decompose.py  export.py  feedback.py  history.py  init_wizard.py  notifications.py  orchestrate_store.py  policy.py  routing.py  security.py  server.py  status.py  tui.py  workflow.py
mcp/modelmux/src/modelmux/a2a/: convergence.py  engine.py  http_server.py  types.py
mcp/modelmux/src/modelmux/adapters/: __init__.py  base.py  codex.py  dashscope.py  generic.py  opencode.py
mcp/modelmux/src/vyane/: __init__.py  __main__.py  audit.py  benchmark.py  cli.py  config.py  dashboard.py  detect.py  export.py  feedback.py  history.py  init_wizard.py  log.py  monitor.py  notifications.py  orchestrate.py  orchestrate_store.py  paths.py  policy.py  routing.py  security.py  server.py  status.py  tui.py  workflow.py
mcp/modelmux/src/vyane/a2a/: __init__.py  client.py  context.py  convergence.py  engine.py  http_server.py  patterns.py  types.py
mcp/modelmux/src/vyane/adapters/: __init__.py  a2a_remote.py  claude.py  codex.py  dashscope.py  gemini.py  generic.py  ollama.py  opencode.py
mcp/modelmux/tests/: test_a2a.py  test_a2a_client.py  test_a2a_e2e.py  test_a2a_federation.py  test_a2a_http.py  test_adapters_init.py  test_async_dispatch.py  test_async_intervention.py  test_audit.py  test_audit_policy.py  test_base_adapter.py  test_benchmark.py  test_broadcast.py  test_bugfixes.py  test_category_binding.py  test_category_prompt.py  test_claude_adapter.py  test_codex_adapter.py  test_codex_utf8.py  test_compare.py  test_config.py  test_context.py  test_convergence.py  test_costs.py  test_dashboard.py  test_dashscope.py  test_decompose.py  test_detect.py  test_dispatch_cli.py  test_e2e.py  test_export.py  test_failover.py  test_feedback.py  test_gemini_adapter.py  test_history.py  test_init_wizard.py  test_intent.py  test_log.py  test_notifications.py  test_ollama.py  (+13 more)
references/: cross-platform.md
references/consultation/: codex-gpt5.3-response.md
