[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collab-hub"
version = "0.1.0"
description = "Unified MCP server for cross-platform multi-model AI collaboration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]

[project.scripts]
collab-hub = "collab_hub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/collab_hub"]
